{
  "version": 4,
  "terraform_version": "1.7.3",
  "serial": 47,
  "lineage": "f03ab847-8906-2ec7-4acd-c54dace65626",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "myFirstServerbyTerraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06b72b3b2a773be2b",
            "arn": "arn:aws:ec2:ap-south-1:730335487196:instance/i-027698c9012dd46c4",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-027698c9012dd46c4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-024e8adc684d26211",
            "private_dns": "ip-10-0-1-216.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.216",
            "public_ip": "13.201.94.36",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02c5aab2d564a2e6d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d6af7c66f0b79770",
            "tags": {
              "Name": "FirstInstanceWithTerraform"
            },
            "tags_all": {
              "Name": "FirstInstanceWithTerraform"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02eb397bcfa216c00"
            ]
          },
          "dependencies": [
            "aws_key_pair.key-tf",
            "aws_security_group.SecurityGroupAssignement1TF",
            "aws_subnet.subnetTFAssignment1",
            "aws_vpc.VPCTFAssignment1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gwTFAssignment1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:730335487196:internet-gateway/igw-0b34cc8ae25d70159",
            "id": "igw-0b34cc8ae25d70159",
            "owner_id": "730335487196",
            "tags": {
              "Name": "gwTFAssinment1"
            },
            "tags_all": {
              "Name": "gwTFAssinment1"
            },
            "vpc_id": "vpc-0b76bb0038e55867e"
          },
          "dependencies": [
            "aws_vpc.VPCTFAssignment1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "RouteTableAssignment1TF",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:730335487196:route-table/rtb-0b192ce6750dece94",
            "id": "rtb-0b192ce6750dece94",
            "owner_id": "730335487196",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b34cc8ae25d70159",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "routeTFAssinment1"
            },
            "tags_all": {
              "Name": "routeTFAssinment1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b76bb0038e55867e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gwTFAssignment1",
            "aws_vpc.VPCTFAssignment1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tableassociationAssignment1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e4cde80a8c859098",
            "route_table_id": "rtb-0b192ce6750dece94",
            "subnet_id": "subnet-0d6af7c66f0b79770"
          },
          "dependencies": [
            "aws_internet_gateway.gwTFAssignment1",
            "aws_route_table.RouteTableAssignment1TF",
            "aws_subnet.subnetTFAssignment1",
            "aws_vpc.VPCTFAssignment1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SecurityGroupAssignement1TF",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:730335487196:security-group/sg-02eb397bcfa216c00",
            "description": "Allow HTTP (port 80) and SSH (port 22) ingress traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02eb397bcfa216c00",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "SecurityGroupAssignement1TF",
            "name_prefix": "",
            "owner_id": "730335487196",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b76bb0038e55867e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.VPCTFAssignment1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnetTFAssignment1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:730335487196:subnet/subnet-0d6af7c66f0b79770",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d6af7c66f0b79770",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "730335487196",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnetTFAssignment1"
            },
            "tags_all": {
              "Name": "subnetTFAssignment1"
            },
            "vpc_id": "vpc-0b76bb0038e55867e"
          },
          "dependencies": [
            "aws_vpc.VPCTFAssignment1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "VPCTFAssignment1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:730335487196:vpc/vpc-0b76bb0038e55867e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0155cc133d3e8e17d",
            "default_route_table_id": "rtb-01c57c30f866db0ef",
            "default_security_group_id": "sg-03d3ccb9ad3598b8b",
            "dhcp_options_id": "dopt-07abf5ce04b972dab",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b76bb0038e55867e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01c57c30f866db0ef",
            "owner_id": "730335487196",
            "tags": {
              "Name": "VPCTFAssignment1"
            },
            "tags_all": {
              "Name": "VPCTFAssignment1"
            }
          }
        }
      ]
    }
  ]
}